Lots of basic travel cleanup.